--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/emerald.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emerald ⭐</title>
+    <title>thundr.</title>
     <meta
       name="description"
-      content="The Emerald service, your one stop solution for all you're nefarious needs"
+      content="thundr. — a modern, sleek web experience"
     />
     <meta name="og:image" content="/emerald.png" />
 
